deployment/kubernetes/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kpack-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpack-ui
  namespace: kpack-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpack-ui
  template:
    metadata:
      labels:
        app: kpack-ui
    spec:
      imagePullSecrets:
        - name: creds
      serviceAccountName: pivotal-kpack-ui
      containers:
        - name: ui
          image: docker.pkg.github.com/joaopapereira/kpack-ui/website:0.0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kpack-ui-service
  namespace: kpack-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kpack-ui
    app.kubernetes.io/instance: kpack-ui
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kpack-ui-ingress
  namespace: kpack-ui
spec:
  rules:
    - host: beam.picorivera.cf-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kpack-ui-service
              servicePort: http
